# week3-w24-solution

./: CMakeLists.txt
data/: thread2_data.txt  thread3_data.txt
include/: chat_socket.hpp  multi_send_socket.hpp
lib/socket/: client_socket.cpp  client_socket.hpp  connection_socket.cpp  connection_socket.hpp  server_socket.cpp  server_socket.hpp  socket.cpp  socket.hpp
lib/socket/message_socket/: client_message_socket.cpp  client_message_socket.hpp  connection_message_socket.cpp  connection_message_socket.hpp  message_socket.cpp  message_socket.hpp
lib/socket/utils/: peer_closed_exception.hpp  socket_errno_exception.hpp  socket_exception.hpp
src/: chat_socket.cpp  multi_send_socket.cpp
test_manual/: chat_client.cpp  chat_server.cpp  multi_send_client.cpp  multi_send_server.cpp  single_threaded_chat_client.cpp  single_threaded_chat_server.cpp
